# ChangeLog for net-dns/avahi
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.187 2010/10/06 22:47:20 swegener Exp $

  06 Oct 2010; Sven Wegener <swegener@gentoo.org> avahi-0.6.28.ebuild:
  Bump libdaemon dependency to 0.14, bug #339885.

*avahi-0.6.28 (05 Oct 2010)

  05 Oct 2010; Sven Wegener <swegener@gentoo.org> +avahi-0.6.28.ebuild:
  Version bump.

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org> avahi-0.6.25-r1.ebuild:
  ia64/s390/sh/sparc stable wrt #278177

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> avahi-0.6.25-r1.ebuild:
  Marked ppc/ppc64 stable for bug #278177.

  11 Aug 2010; Arun Raghavan <ford_prefect@gentoo.org>
  avahi-0.6.27-r1.ebuild:
  Disable introspection for now. Upstream ships a .gir file which is broken
  with >=gobject-introspection-0.9. (http://avahi.org/ticket/318)

*avahi-0.6.27-r1 (10 Aug 2010)

  10 Aug 2010; Sven Wegener <swegener@gentoo.org> +avahi-0.6.27-r1.ebuild,
  +files/avahi-0.6.27-no-auto-activated.patch:
  Revert one commit that introduced compability for auto-activated services.
  This fixes bug #331275.

*avahi-0.6.27 (03 Aug 2010)

  03 Aug 2010; Sven Wegener <swegener@gentoo.org> +avahi-0.6.27.ebuild:
  Version bump.

  03 Aug 2010; Jeroen Roovers <jer@gentoo.org> avahi-0.6.25-r1.ebuild:
  Stable for HPPA (bug #278177).

  19 Jul 2010; Markus Meier <maekke@gentoo.org> avahi-0.6.25-r1.ebuild:
  arm stable, bug #278177

  11 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
  avahi-0.6.25-r1.ebuild:
  Stable on alpha, bug #278177

  28 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  avahi-0.6.25-r1.ebuild:
  x86 stable wrt bug #278177

  25 Jun 2010; Christoph Mende <angelos@gentoo.org> avahi-0.6.25-r1.ebuild:
  Stable on amd64 wrt bug #278177

  24 Jun 2010; Sven Wegener <swegener@gentoo.org> avahi-0.6.25-r1.ebuild:
  Fix broken intltool rules, bug #319057.

  19 May 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>