@@ -13,6 +13,6 @@ EBUILD avahi-0.6.25-r1.ebuild 5001 RMD160 a3630d681a75bbb9bb12c2ef86d213750eec6a
 EBUILD avahi-0.6.25.ebuild 5352 RMD160 0fb9fe844fba482fbfc95caf8744b71539c55324 SHA1 353f53cbbf73ed27c5b85629fd2e09374f08a251 SHA256 854cb5b236f3109a227970a9aa99904c1f947680a8bef1345c3e98bdc89d0efa
 EBUILD avahi-0.6.27-r1.ebuild 4936 RMD160 3003c3df83b4454863f0cb15259fd4e38c2a79d7 SHA1 7d17c3bf220c9c8a9f445fb17d73e4a9afdb8864 SHA256 a5260698cfca38d54d53f1bd93be28316bc189cf6f18c38e9a6798cee762b966
 EBUILD avahi-0.6.27.ebuild 4679 RMD160 8ea7c8f93c28455161164f508b6ee46532fb1e23 SHA1 b74b902c640695c5cb73e2f75a23b6c07bef08bb SHA256 75995b26ecbcbb4d6d4a42882034acebd44f932bd8d0d9db3e149989aac07d21
-EBUILD avahi-0.6.28.ebuild 4874 RMD160 953d797788dacbb51b3c2dea72524df9cb044d69 SHA1 217c39dcb1f186858e47562d475301ed1f975e02 SHA256 cac4f27a1f009e77e621355f70aae77c0fcf61971f2b28cf929e137383c4142e
-MISC ChangeLog 27873 RMD160 c4606c707e052fed1a0eeebd9188e74c20d3cc4c SHA1 def40b05e96e9c2e717a99e379f051f235320dd5 SHA256 883c32387b0fe1659e8d6b4273ef4f31428f087930adac411141b7d13efa2ee8
+EBUILD avahi-0.6.28.ebuild 4813 RMD160 cc5249e798c5bf1191c7697eb70d156bff2c8564 SHA1 8ce02969ad6e645a42cafc12dc1dd3361aea1208 SHA256 8eac4b4b455386ff64a303a4563ec09fb7c5e9fb79bd15a8c9315bb421ae069f
+MISC ChangeLog 28044 RMD160 e766a9a811ca77b545062f06ebc9dcd0e04fc013 SHA1 1b1a521b8fcecb1712e7cd8b9f8739df6da5a11e SHA256 80d1d817122bd6ddff737353afaec9d1c335648f5d73cd405f63a94b314eefa7
 MISC metadata.xml 609 RMD160 fa4efaaf9b8ac6d75251c9bd1f0721ea175acda9 SHA1 4532738c9ff6d9d2a2aef226b827919ac31be2de SHA256 365224bb3c21c159a89fa03ea08c534eb27cc2df62012a69e03ad81779607faa
